chore: update doc

--- a/src/docs/guides/general/features/watermark.en-US.mdx
+++ b/src/docs/guides/general/features/watermark.en-US.mdx
@@ -36,6 +36,7 @@ univer.registerPlugin(UniverWatermarkPlugin);
 ## Use
 
 Watermark supports three settings: UI interface, FacadeAPI, and plug-in configuration.
+Three types of watermarks are supported: user information type, custom image type, and custom text type. The display of watermarks only supports one type of display, and the priority is user information type > custom image type > custom text type.
 
 ### How to use FacadeAPI
 
