--- a/src/docs/guides/sheet/getting-started/presets.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/presets.zh-CN.mdx
@@ -3,13 +3,15 @@ import VersionBadge from '@/components/VersionBadge'
 
 # Presets  <VersionBadge version="0.5.0+" />
 
-从 0.5.0 版本开始，我们为一些常见的场景准备了预置的插件组合以及配置，让你无需安装和配置插件就可以立即开始开发 Univer，不用再关心安装、引入 Facade API 和注册插件等细节。
+从 0.5.0 版本开始，我们为一些常见的场景准备了预置的插件组合以及配置，让你可以立即开始开发 Univer，不用再关心安装、引入 Facade API 和注册插件等细节。
 
-<Callout type="info">
+<Callout type="info" emoji="🛸">
   如果你希望更灵活地引入和配置插件（例如懒加载部分插件，以及使用一些 Presets 不提供的配置项），可以参考 [高级引入方式](/guides/sheet/getting-started/advanced-installation)。
 </Callout>
 
-TODO: 要不我们提供基于包管理器和使用 HTML 的两个版本？
+<Callout type="error">
+TODO: 提供基于包管理器和使用 HTML 的两个 demo
+</Callout>
 
 ## 基础电子表格
 
@@ -93,7 +95,7 @@ createUniver({
 
 ## 运行在 Node.js 当中的 Univer
 
-请移步 [“在 Node.js 上运行 Univer”](/guides/sheet/getting-started/node)。
+请移步 [在 Node.js 上运行 Univer](/guides/sheet/getting-started/node)。
 
 ## 在以上 Presets 中启用 Web Worker
 
