--- a/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
@@ -20,7 +20,9 @@ import { Callout } from 'nextra/components'
   />
 </Cards>
 
-## 从模板创建
+## Univer 开源版
+
+### 从模板开始
 
 如果你想在本地搭建 Univer 应用，可以使用以下命令从模板创建一个新的 Univer 应用。
 
@@ -47,21 +49,21 @@ import { Callout } from 'nextra/components'
   </Tabs.Tab>
 </Tabs>
 
-至此，你已经成功创建了属于你的第一个 Univer 项目。
+至此，你已经成功创建了属于你的第一个 Univer 项目。你可以在 [dream-num/univer-sheet-start-kit](https://github.com/dream-num/univer-sheet-start-kit) 找到该模板的源代码。
 
-## 从单 HTML 文件开始
+### 从单 HTML 文件开始
 
-如果你未使用编译工具，可以下载如下 HTML 文件以快速开始：
+如果你不想使用前端开发工具，可以下载如下 HTML 文件以快速开始：
 
 <Cards>
   <Card
-    icon="🌍"
+    icon="📦"
     title={<span className="">Univer Sheet (HTML)</span>}
     href="https://stackblitz.com/~/github.com/awesome-univer/sheets-vite-demo"
   />
 </Cards>
 
-## 集成 Univer 高级功能的模板
+## 集成 Univer 高级功能
 
 当然，你有可能不满足于此，想要打印、导入导出、协同编辑等更多功能，这些功能需要更多的配置以及服务端的支持。不过不用担心，Univer 也为你提供了快速体验这些功能的方式，不妨照着下面的步骤来试试：
 
@@ -78,7 +80,7 @@ import { Callout } from 'nextra/components'
 
   ### 安装并运行客户端 <a id="install-and-run-the-frontend" />
 
-  <Tabs items={['pnpm', 'npm', '不使用包管理工具']}>
+  <Tabs items={['pnpm', 'npm', '从单 HTML 文件开始']}>
     <Tabs.Tab label="pnpm">
       执行以下命令需要设备安装有 `nodejs >= 18`, `pnpm >= 7` 和 `git`。
 
@@ -92,9 +94,9 @@ import { Callout } from 'nextra/components'
         如果服务端部署在其他机器上，需要在 `vite.config.ts` 中把 `server` 配置里的 `localhost` 改为该机器的 IP 地址。
       </Callout>
 
-      🎉 恭喜你，你又成功创建了一个包含了服务端的 Univer 项目，你可以访问 [http://localhost:5173/](http://localhost:5173/) 体验这些进阶的功能。
+      🎉 恭喜你，你已成功创建了包含了服务端的 Univer 项目，你可以访问 [http://localhost:5173/](http://localhost:5173/) 体验高级功能和协同编辑。
 
-      你也可以在 [dream-num/univer-pro-sheet-start-kit](https://github.com/dream-num/univer-pro-sheet-start-kit) 找到该模板的源代码。
+      你可以在 [dream-num/univer-pro-sheet-start-kit](https://github.com/dream-num/univer-pro-sheet-start-kit) 找到该模板的源代码。
     </Tabs.Tab>
     <Tabs.Tab label="npm">
       执行以下命令需要设备安装有 `nodejs >= 18`, `npm >= 8` 和 `git`。
@@ -113,7 +115,7 @@ import { Callout } from 'nextra/components'
 
       你也可以在 [dream-num/univer-pro-sheet-start-kit](https://github.com/dream-num/univer-pro-sheet-start-kit) 找到该模板的源代码。
     </Tabs.Tab>
-    <Tabs.Tab label="不使用包管理工具">
+    <Tabs.Tab label="从单 HTML 文件开始">
       如果你想不借助任何前端构建工具直接在浏览器中运行 Univer，你可以将以下代码复制保存到一个 HTML 文件中，然后双击在浏览器中打开该文件，即可体验打印、协同编辑、导入导出等功能。
 
       ```html
@@ -372,13 +374,13 @@ import { Callout } from 'nextra/components'
 
 ## 下一步
 
-恭喜你！你已经迈出了第一步，开始了解 Univer。接下来，你可以继续深入学习 Univer，这里有一些建议：
+恭喜你已经迈出了学习 Univer 的第一步，你可以参考我们给出的建议继续深入学习 Univer：
 
-- **🔰 安装和引入**：如果你想学习如何从头开始手动创建一个 Univer 项目，请查看[安装和引入](/guides/sheet/getting-started/installation)章节。它将一步步引导你完成整个过程。
-- **🧱 基础概念**：阅读在 Univer 当中会反复出现的[基本概念](/guides/sheet/getting-started/concepts)，以更好地使用和深入 Univer 项目。
-- **🏗️ 进阶使用**：如果你想进一步提升你的 Univer 技能，可以查看[进阶使用](/guides/sheet/advanced/custom-canvas)章节。它涵盖了更多高级主题和技巧。
-- **📚 教程**：如果你想了解一些实际的例子和真实的用例，可以查看[教程](/guides/sheet/tutorials/csv-import-plugin)章节，里面有一些实用的教程，可以帮助你学习如何使用 Univer 构建各种应用和功能。
-- **🌌 架构**：如果你想深入了解 Univer 的内部工作原理，可以查看 [架构](/guides/sheet/architecture/univer) 章节，它提供了 Univer 的架构、核心概念和设计原则的全面概述。
-- **🎢 在线演示**： 别忘了探索[在线演示](/playground)页面，在那里你可以尝试各种 Univer 演示，看到这个库的实际运行。
+- **🔰 安装和引入**：如果你想学习如何从头开始手动创建一个 Univer 项目，请查看 [安装和引入](/guides/sheet/getting-started/installation) ，它将一步步引导你完成整个过程。
+- **🧱 基础概念**：阅读在 Univer 当中会反复出现的 [基本概念](/guides/sheet/getting-started/concepts)，以更好地使用和深入 Univer 项目。
+- **🏗️ 进阶使用**：如果你想进一步提升你的 Univer 技能，可以查看 [进阶使用](/guides/sheet/advanced/custom-canvas)，它涵盖了更多高级主题和技巧。
+- **📚 教程**：如果你想了解一些实际的例子和真实的用例，可以查看 [教程](/guides/sheet/tutorials/csv-import-plugin)，里面有一些实用的教程，可以帮助你学习如何使用 Univer 构建各种应用和功能。
+- **🌌 架构**：如果你想深入了解 Univer 的内部工作原理，可以查看 [架构](/guides/sheet/architecture/univer)，它提供了 Univer 的架构、核心概念和设计原则的全面概述。
+- **🎢 在线演示**： 别忘了探索 [在线演示](/playground)，在那里你可以尝试各种 Univer 演示。
 
 无论你选择哪条道路，Univer 都会在你的每一步旅程中支持你。祝你开发愉快！
