--- a/src/docs/guides/sheet/getting-started/presets.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/presets.zh-CN.mdx
@@ -40,8 +40,7 @@ univerAPI.createUniverSheet({ name: 'Test Sheet' });
 使用 Univer 官方提供的高级功能（包含打印、透视表等等），需要引入 `UniverSheetsAdvancedPreset`。
 
 1. 如果你已经取得授权，需要配置授权信息。
-2. 如果你已经对接了服务端，需要配置服务端 endpoint。
-
+2. 如果你已经部署了服务端，需要配置服务端 endpoint。
 
 ```js
 import { createUniver, defaultTheme, LocaleType } from '@univerjs/presets';
