--- a/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
@@ -19,7 +19,9 @@ You can play with Univer online without installing anything. Just click the link
   />
 </Cards>
 
-## Starter Kit
+## Univer OSS
+
+### Starter Kit
 
 If you prefer to start with a local development environment, you can use the following starter kits to create a new Univer app in just a few seconds.
 
@@ -46,9 +48,21 @@ If you prefer to start with a local development environment, you can use the fol
   </Tabs.Tab>
 </Tabs>
 
-Great job on your first steps with Univer! You've successfully created your first project and gotten a taste of what Univer can do.
+Great job on your first steps with Univer! You've successfully created your first project and gotten a taste of what Univer can do. You can find the source code for this template at [dream-num/univer-sheet-start-kit](https://github.com/dream-num/univer-sheet-start-kit).
 
-## Integrated Server Template
+### From a Single HTML File
+
+If you prefer not to use frontend development tools, you can download the following HTML file to get started quickly:
+
+<Cards>
+  <Card
+    icon="📦"
+    title={<span className="">Univer Sheet (HTML)</span>}
+    href="https://unpkg.com/@univerjs/umd/lib/univer.full.umd.js"
+  />
+</Cards>
+
+## Integrate Advanced Features
 
 Of course, you may want more than just the basics. If you're looking to add features like printing, importing/exporting, and collaborative editing, you'll need additional configuration and server support. But don't worry, Univer has you covered! Follow the steps below to quickly experience these advanced features.
 
