--- a/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
@@ -110,10 +110,9 @@ import { Callout } from 'nextra/components'
       <Callout emoji="⚠️">
         如果服务端部署在其他机器上，需要在 `vite.config.ts` 中把 `server` 配置里的 `localhost` 改为该机器的 IP 地址。
       </Callout>
-            
-      🎉 恭喜你，你又成功创建了一个包含了服务端的 Univer 项目，你可以访问 [http://localhost:5173/](http://localhost:5173/) 体验这些进阶的功能。
+      🎉 恭喜你，你已成功创建了包含了服务端的 Univer 项目，你可以访问 [http://localhost:5173/](http://localhost:5173/) 体验高级功能和协同编辑。
 
-      你也可以在 [dream-num/univer-pro-sheet-start-kit](https://github.com/dream-num/univer-pro-sheet-start-kit) 找到该模板的源代码。
+      你可以在 [dream-num/univer-pro-sheet-start-kit](https://github.com/dream-num/univer-pro-sheet-start-kit) 找到该模板的源代码。     
     </Tabs.Tab>
     <Tabs.Tab label="从单 HTML 文件开始">
       如果你想不借助任何前端构建工具直接在浏览器中运行 Univer，你可以将以下代码复制保存到一个 HTML 文件中，然后双击在浏览器中打开该文件，即可体验打印、协同编辑、导入导出等功能。
