--- a/src/docs/guides/sheet/getting-started/installation.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/installation.en-US.mdx
@@ -6,6 +6,12 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 <BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC, UniverTypes.SLIDE]} value={UniverTypes.SHEET} />
 
+From version 0.5.0, Univer provides the `@univerjs/presets` package, which provides presets for common scenarios to help you quickly build a Univer application without worrying about how to import and configure Univer plugins.
+
+<Callout type="info" emoji="🍃">
+  If you are using Univer for the first time, we recommend starting with Presets. In the following sections, unless otherwise specified, we will assume that you are using Presets. If you are already familiar with Univer and want to import plugins more flexibly (e.g., lazy loading some plugins), you can refer to the [Advanced Installation](/guides/sheet/advanced-installation) section.
+</Callout>
+
 ## Using Package Managers
 
 If you are familiar with modern frontend development, using package managers to build applications containing Univer will be a good choice.
@@ -14,143 +20,46 @@ We recommend using build tools such as [Vite](https://vitejs.dev/), [esbuild](ht
 
 ### Installation
 
-To facilitate the deployment of Univer's frontend, a variety of npm packages are utilized. You may install the requisite packages based on your specific requirements.
-
-<Callout>
-  - If you are using npm, make sure you are using npm@7 or higher. This is because npm@3 ~ npm@6 will not correctly install `peerDependencies`[^1].
-  - If you are using pnpm, make sure you are using pnpm@8 or higher. If you are using pnpm@6 ~ pnpm@7, you can try configuring `auto-install-peers=true` [^2] to resolve dependency installation issues.
-  - If you are using yarn, you need to manually install the missing `peerDependencies`[^3], but don't worry, the installation commands below already include these dependencies.
-</Callout>
-
-The following example will guide you through which plugins are necessary and how to install them:
+Choose your package manager to install `@unvierjs/presets`:
 
 <Tabs items={['pnpm', 'npm', 'yarn']}>
   <Tabs.Tab label="pnpm">
     ```shell
-    pnpm add @univerjs/core @univerjs/design @univerjs/docs @univerjs/docs-ui @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-formula-ui @univerjs/sheets-ui @univerjs/ui
+    pnpm add @univerjs/presets
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
     ```shell
-    npm install @univerjs/core @univerjs/design @univerjs/docs @univerjs/docs-ui @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-formula-ui @univerjs/sheets-ui @univerjs/ui
+    npm install @univerjs/presets
     ```
   </Tabs.Tab>
   <Tabs.Tab label="yarn">
     ```shell
-    yarn add @univerjs/core @univerjs/design @univerjs/docs @univerjs/docs-ui @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-formula-ui @univerjs/sheets-ui @univerjs/ui react react-dom rxjs
+    yarn add @univerjs/presets
     ```
   </Tabs.Tab>
 </Tabs>
-
-If you want to get a more convenient development experience in the future, we also recommend you to install `@univerjs/facade`:
-
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tabs.Tab label="pnpm">
-    ```shell
-    pnpm add @univerjs/facade
-    ```
-  </Tabs.Tab>
-  <Tabs.Tab label="npm">
-    ```shell
-    npm install @univerjs/facade
-    ```
-  </Tabs.Tab>
-  <Tabs.Tab label="yarn">
-    ```shell
-    yarn add @univerjs/facade
-    ```
-  </Tabs.Tab>
-</Tabs>
-
-For more information about `@univerjs/facade`, please refer to the [Facade](/guides/sheet/getting-started/facade) section.
-
-### Update
-
-Since Univer uses a monorepo to manage its codebase, each release will update the version number of all official plugins. Therefore, when updating Univer, you should update all plugins at the same time to ensure that their version numbers are consistent.
-
-If you are using pnpm, you can use the following command to update all plugins:
-
-```shell
-pnpm update "@univerjs/*" "@univerjs-pro/*" @latest
-```
 
 ### Usage
 
-<Callout>
-  The order of importing the style files is important. Make sure you import the CSS styles of `@univerjs/design` and `@univerjs/ui` before importing the CSS styles of other plugins.
-</Callout>
-
-You need to import Univer's css files, locales, and some necessary plugins in your project:
+With just a few lines of code, you can start a spreadsheet application and load the basic functionality of a spreadsheet:
 
 ```typescript
-import "@univerjs/design/lib/index.css";
-import "@univerjs/ui/lib/index.css";
-import "@univerjs/docs-ui/lib/index.css";
-import "@univerjs/sheets-ui/lib/index.css";
-import "@univerjs/sheets-formula-ui/lib/index.css";
+import { LocaleType, LogLevel } from '@univerjs/core';
+import { defaultTheme } from '@univerjs/design';
+import { createUniver } from '@univerjs/presets';
+import { UniverSheetsBasicPreset } from '@univerjs/presets/sheets/sheets-basic';
+import { enUS } from '@univerjs/presets/sheets/sheets-basic/en-US';
 
-import { LocaleType, Tools, Univer } from "@univerjs/core";
-import { defaultTheme } from "@univerjs/design";
-
-import { UniverFormulaEnginePlugin } from "@univerjs/engine-formula";
-import { UniverRenderEnginePlugin } from "@univerjs/engine-render";
-
-import { UniverUIPlugin } from "@univerjs/ui";
-
-import { UniverDocsPlugin } from "@univerjs/docs";
-import { UniverDocsUIPlugin } from "@univerjs/docs-ui";
-
-import { UniverSheetsPlugin } from "@univerjs/sheets";
-import { UniverSheetsFormulaPlugin } from "@univerjs/sheets-formula";
-import { UniverSheetsFormulaUIPlugin } from "@univerjs/sheets-formula-ui";
-import { UniverSheetsUIPlugin } from "@univerjs/sheets-ui";
-
-import DesignEnUS from '@univerjs/design/locale/en-US';
-import UIEnUS from '@univerjs/ui/locale/en-US';
-import DocsUIEnUS from '@univerjs/docs-ui/locale/en-US';
-import SheetsEnUS from '@univerjs/sheets/locale/en-US';
-import SheetsUIEnUS from '@univerjs/sheets-ui/locale/en-US';
-import SheetsFormulaUIEnUS from '@univerjs/sheets-formula-ui/locale/en-US';
-```
-
-<Callout type="info" emoji="ℹ️">
-  Import a variety of locales and css files for plugins may make development cumbersome and difficult to maintain. We provide Univer Plugins to help you import plugins more conveniently. For more information, please refer to the [Simplified Import](/guides/sheet/getting-started/univer-plugins) section.
-</Callout>
-
-Then create a Univer instance and register these plugins:
-
-```typescript
-const univer = new Univer({
-  theme: defaultTheme,
-  locale: LocaleType.EN_US,
-  locales: {
-    [LocaleType.EN_US]: Tools.deepMerge(
-      SheetsEnUS,
-      DocsUIEnUS,
-      SheetsUIEnUS,
-      SheetsFormulaUIEnUS,
-      UIEnUS,
-      DesignEnUS,
-    ),
-  },
+const { univerAPI } = createUniver({
+    locale: LocaleType.EN_US,
+    theme: defaultTheme,
+    presets: [
+        UniverSheetsBasicPreset({ locales: { enUS }, container: 'app' }),
+    ],
 });
 
-univer.registerPlugin(UniverRenderEnginePlugin);
-univer.registerPlugin(UniverFormulaEnginePlugin);
-
-univer.registerPlugin(UniverUIPlugin, {
-  container: 'app',
-});
-
-univer.registerPlugin(UniverDocsPlugin);
-univer.registerPlugin(UniverDocsUIPlugin);
-
-univer.registerPlugin(UniverSheetsPlugin);
-univer.registerPlugin(UniverSheetsUIPlugin);
-univer.registerPlugin(UniverSheetsFormulaPlugin);
-univer.registerPlugin(UniverSheetsFormulaUIPlugin);
-
-univer.createUnit(UniverInstanceType.UNIVER_SHEET, {});
+univerAPI.createUniverSheet({ name: 'Test Sheet' });
 ```
 
 export const code = `const univer = new Univer({
@@ -179,17 +88,17 @@ univer.createUnit(UniverInstanceType.UNIVER_SHEET, {});`
 
 <ReactLive code={code} />
 
-## Using CDN
+### Update
 
-If you don't want to use package managers, you can also import Univer's style files, language packs, and plugins via CDN. Univer provides a separate UMD build for each plugin. Of course, the trivial UMD packages give developers a lot of flexibility, but they also pose some new challenges:
+If you are using pnpm, you can use the following command to update all plugins:
 
-- How do I determine the pre-dependencies of a package?
-- How do I determine the correct import order?
-- How do I determine which packages provide a feature?
+```shell
+pnpm update "@univerjs/presets" @latest
+```
 
-If you don't have a clear understanding of Univer's plugin mechanism, these questions usually mean countless trial-and-error attempts.
+## Import by a `<script>` Tag
 
-Therefore, Univer also provides a UMD build that includes all plugins. You can include this UMD build in your HTML file and access each plugin through the `window` object.
+If you are not using a package manager, you can also import Univer via a `<script>` tag.
 
 ### Example
 
@@ -250,21 +159,7 @@ Current mainstream CDN service providers (such as jsDelivr and unpkg) support Un
 </body>
 ```
 
-From the above code, it can be seen that the way to import Univer via CDN is basically the same as using package managers, except that each plugin has its own namespace. Typically, the naming convention for these namespaces is the uppercase camel case `Univer<PluginName>`.
-
-### Slim Version
-
-If you are already using React, ReactDOM, and RxJS in your project, you can opt for the slim version of the UMD bundle, which excludes these dependencies.
-
-```diff
-+ <script src="https://unpkg.com/react/umd/react.production.min.js"></script>
-+ <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
-+ <script src="https://unpkg.com/rxjs/dist/bundles/rxjs.umd.min.js"></script>
- 
-- <script src="https://unpkg.com/@univerjs/umd/lib/univer.full.umd.js"></script>
-+ <script src="https://unpkg.com/@univerjs/umd/lib/univer.slim.umd.js"></script>
-<link rel="stylesheet" href="https://unpkg.com/@univerjs/umd/lib/univer.css">
-```
+`univerAPI` is the API object that you can use to interact with Univer.
 
 ### Specifying Versions
 
@@ -281,48 +176,118 @@ In the previous section, you have already created a Univer instance and an empty
 
 ### Loading Data
 
-By calling the `createUniverSheet` method of `Univer`, you can create a new `Workbook` instance. The first parameter of the method is an object containing the data of the `Workbook`, which should conform to the `IWorkbookData` interface.
+By calling the `createUniverSheet` method of `univerAPI`, you can create a new `Workbook` instance. The first parameter of the method is an object containing the data of the `Workbook`, which should conform to the `IWorkbookData` interface.
 
 ```typescript
 import { IWorkbookData, UniverInstanceType } from "@univerjs/core";
 
-const data: IWorkbookData = {};
-const workbook = univer.createUnit(UniverInstanceType.UNIVER_SHEET, data);
+const data: IWorkbookData = {
+  id: 'test',
+  sheets: {
+    sheet1: {
+      id: 'sheet1',
+      name: 'sheet1',
+      cellData: {
+        0: {
+          0: {
+            v: 'Hello Univer!',
+          },
+        },
+
+      },
+      rowCount: 100,
+      columnCount: 100,
+    },
+  },
+  locale: LocaleType.ZH_CN,
+  name: 'Test Workbook',
+  sheetOrder: ['sheet1'],
+};
+const workbook = univerAPI.createUniverSheet(data);
 ```
 
-You can learn more about all the fields supported by `IWorkbookData` [here](/typedoc/@univerjs/core/interfaces/IWorkbookData).
+export const code2 = `const univer = new Univer({
+  theme: defaultTheme,
+  locale: LocaleType.ZH_CN,
+  locales: {
+    [LocaleType.ZH_CN]: zhCN,
+  },
+});
+
+univer.registerPlugin(UniverRenderEnginePlugin);
+univer.registerPlugin(UniverFormulaEnginePlugin);
+
+univer.registerPlugin(UniverUIPlugin, {
+  container: 'app',
+});
+
+univer.registerPlugin(UniverDocsPlugin);
+univer.registerPlugin(UniverDocsUIPlugin);
+
+univer.registerPlugin(UniverSheetsPlugin);
+univer.registerPlugin(UniverSheetsUIPlugin);
+univer.registerPlugin(UniverSheetsFormulaPlugin);
+
+const data = {
+        id: 'test',
+        appVersion: '3.0.0-alpha',
+        sheets: {
+            sheet1: {
+                id: 'sheet1',
+                name: 'sheet1',
+                cellData: {
+                    0: {
+                        0: {
+                            v: 'Hello Univer!',
+                        },
+                    },
+                    
+                },
+                rowCount: 100,
+                columnCount: 100,
+            },
+        },
+        locale: LocaleType.ZH_CN,
+        name: '',
+        sheetOrder: ['sheet1'],
+        styles: {},
+        resources: [
+        ],
+    };
+
+univer.createUnit(UniverInstanceType.UNIVER_SHEET, data);`
+
+<ReactLive code={code2} />
 
 ### Modifying Data
 
-<Callout type="error" emoji="🚨">
-  Univer operates and updates states and data based on a [command system](/guides/sheet/architecture/univer#command-system), so you **must** use commands or the corresponding Facade API to update data properly, rather than directly modifying data. Any operation that directly modifies data in the hope of updating the view is not allowed.
-</Callout>
-
-`@univerjs/facade` provides a set of APIs for modifying data in Univer. You can use these APIs to modify the data in the `Workbook` instance.
-
-```typescript
-import { FUniver } from "@univerjs/facade";
-
-const univerAPI = FUniver.newAPI(univer);
-```
-
-Then you can use the methods of `univerAPI` to use Univer, such as getting the currently active sheet and updating values in the specified range:
+You can use the Facade API of Univer to interact with Univer. For example, you can get the currently active sheet and update values in the specified range:
 
 ```typescript
 const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
 
-// Set the number 1 in A1
 const range = sheet.getRange(0, 0, 1, 1);
 range.setValue(1);
 ```
 
+<Callout type="error" emoji="🚨">
+  Univer operates and updates states and data based on a [command system](/guides/sheet/architecture/univer#command-system), so you **must** use commands or the corresponding Facade API to update data properly, rather than directly modifying data. Any operation that directly modifies data in the hope of updating the view will not work as expected.
+</Callout>
+
 ### Storing Data
 
-By calling the `save` method of the current `Workbook`, you can get an `IWorkbookData` object containing the data inside the sheet.
+By calling the `save` method of the `workbook`, you can get an `IWorkbookData` object containing the data inside the sheet.
 
 ```typescript
 const savedData = univerAPI.getActiveWorkbook().save();
 ```
+
+## Next
+
+* [Basic Concepts](/guides/sheet/getting-started/basic-concepts) - Learn about the basic concepts of Univer.
+* [Presets](/guides/sheet/getting-started/presets) - Learn how to use presets to quickly build a Univer application.
+* [Workbook Data Structure](/guides/sheet/getting-started/workbook-data) - Learn how to initialize spreadsheet data.
+* [Features](/guides/sheet/features/code) - Learn about the features of Univer and how to manipulate data.
 
 ---
 
