docs: remove duplicated file

--- a/src/docs/guides/sheet/getting-started/advanced-installation.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/advanced-installation.zh-CN.mdx
@@ -2,7 +2,7 @@ import { Callout, Tabs } from 'nextra/components'
 import ReactLive from '@/components/ReactLive'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
-# 安装和引入
+# 高级安装和引入
 
 <BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC, UniverTypes.SLIDE]} value={UniverTypes.SHEET} />
 
