--- a/src/docs/guides/sheet/getting-started/advanced-installation.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/advanced-installation.en-US.mdx
@@ -2,7 +2,7 @@ import { Callout, Tabs } from 'nextra/components'
 import ReactLive from '@/components/ReactLive'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
-# Installation & Usage
+# Advanced Installation
 
 <BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC, UniverTypes.SLIDE]} value={UniverTypes.SHEET} />
 
