--- a/src/docs/guides/sheet/getting-started/i18n.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/i18n.zh-CN.mdx
@@ -31,7 +31,7 @@ const { univerAPI } = createUniver({
 
 0.1.13 版本后，Univer 不再内置任何语言包，所有语言包均由插件提供。
 
-如果你觉得手动引入插件的语言包过于繁琐，我们还提供了一个构建工具插件，用于自动引入插件所需的语言包。请参考 [构造器插件](/guides/sheet/advanced/univer-plugins) 获取更多信息。
+如果你觉得手动引入插件的语言包过于繁琐，我们还提供了一个构建工具插件，用于自动引入插件所需的语言包。请参考 [打包器插件](/guides/sheet/advanced/univer-plugins) 获取更多信息。
 
 如需手动添加语言包，你可以参考以下示例，根据需要引入对应的语言包并组装成对象传入 `Univer` 实例：
 
