--- a/src/docs/guides/sheet/getting-started/advanced-installation.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/advanced-installation.zh-CN.mdx
@@ -114,7 +114,7 @@ import SheetsFormulaUIZhCN from '@univerjs/sheets-formula-ui/locale/zh-CN';
 ```
 
 <Callout type="info" emoji="ℹ️">
-  大量插件的语言包和样式加载可能会使开发变得繁琐且难以维护。我们提供了 Univer Plugins 来帮助你更加方便地引入插件，详情请参考 [简化引入](/guides/sheet/getting-started/univer-plugins) 章节。
+  大量插件的语言包和样式加载可能会使开发变得繁琐且难以维护。我们提供了 Univer Plugins 来帮助你更加方便地引入插件，详情请参考 [打包器插件](/guides/sheet/getting-started/univer-plugins) 章节。
 </Callout>
 
 然后创建一个 Univer 实例，并注册这些插件：
